force-app/main/default/objects/Renewal_Exception_Approval__c/Renewal_Exception_Approval__c.object-meta.xml
<CustomObject>
    <label>Split/Downside Exception Approval</label>
    <nameField>
        <displayFormat>REA-{000000}</displayFormat>
        <label>Exception Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split/Downside Exception Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>