force-app/main/default/objects/Renewal_Exception_Approval__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Renewal_Exception_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>