force-app/main/default/objects/Renewal_Exception_Approval__c/fields/Exception_Request_Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Request_Primary_Reason__c</fullName>
    <label>Exception Request Primary Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal(s) signed &amp; closed before current account owner received account</fullName>
            </value>
            <value>
                <fullName>AE is new to account (within last 60 days) and negotiations already complete before AE assumed account ownership</fullName>
            </value>
            <value>
                <fullName>Customer went bankrupt or out of business</fullName>
            </value>
            <value>
                <fullName>Customer was acquired by another business</fullName>
            </value>
            <value>
                <fullName>Customer is downsizing fleet</fullName>
            </value>
            <value>
                <fullName>Customer service issues</fullName>
            </value>
            <value>
                <fullName>Commercial terms</fullName>
            </value>
            <value>
                <fullName>Product technical issues</fullName>
            </value>
            <value>
                <fullName>Other (include more detail below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>