force-app/main/default/objects/Renewal_Exception_Approval__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Contra &gt;365 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>