force-app/main/default/objects/Renewal_Exception_Approval__c/fields/Opportunity_Split_New_ACV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split_New_ACV__c</fullName>
    <formula>Opportunity__r.Split_New_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Split New ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>