force-app/main/default/objects/Renewal_Exception_Approval__c/fields/Sales_Comp_Manual_Adjustment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comp_Manual_Adjustment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Comp Manual Adjustment Completed</label>
    <type>Checkbox</type>
</CustomField>